--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
   
   <ol>
     <li>
-      <a href=unit1.html>Unit 1</a>
+      <a href=unit1.html>Unit 1 Project</a>
     </li>
     <li>
-      <a href=unit2.html>Unit 2</a>
+      <a href=unit2.html>Unit 2 Project</a>
     </li>
   </ol>
 </body>
