Add unit 3 project

--- a/index.html
+++ b/index.html
@@ -9,16 +9,24 @@
 </head>
 
 <body>
-  <h1>Dylan Cosper</h1>
-  
-  <ol>
-    <li>
-      <a href=unit1.html>Unit 1 Project</a>
-    </li>
-    <li>
-      <a href=unit2.html>Unit 2 Project</a>
-    </li>
-  </ol>
+  <header>
+    <h1>Dylan Cosper</h1>
+    <hr>
+  </header>
+
+  <main>
+    <ol>
+      <li>
+        <a href=unit1.html>Unit 1 Project</a>
+      </li>
+      <li>
+        <a href=unit2.html>Unit 2 Project</a>
+      </li>
+      <li>
+        <a href=unit3.html>Unit 3 Project</a>
+      </li>
+    </ol>
+  </main>
 </body>
 
 </html>
