--- a/unit2.html
+++ b/unit2.html
@@ -9,15 +9,15 @@
 </head>
 
 <body>
-  <a href=index.html>&lt; Back</a>
   <header>
+    <a href=index.html>&lt; Back</a>
     <h1>My Cool Website</h1>
   </header>
 
   <nav>
-    &boxDR;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxDL;<br>
-    &boxv; More pages &nbsp; &boxv;<br>
-    &boxUR;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxUL;
+    <p>&boxDR;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxDL;<br>
+    &boxv; More pages &boxv;<br>
+    &boxUR;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxH;&boxUL;</p>
     <ul>
       <li><a href="files/pages/page1.html">Page 1</a></li>
       <li><a href="files/pages/page2.html">Page 2</a></li>
