Add unit 4 project

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
       <li>
         <a href=unit3.html>Unit 3 Project</a>
       </li>
+      <li>
+        <a href=unit4.html>Unit 4 Project</a>
+      </li>
     </ol>
   </main>
 </body>
