Add unit 5 project

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       <li>
         <a href=unit4.html>Unit 4 Project</a>
       </li>
+      <li>
+        <a href=unit5.html>Unit 5 Project</a>
+      </li>
     </ol>
   </main>
 </body>
