Add unit 6 project

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
       <li>
         <a href=unit5.html>Unit 5 Project</a>
       </li>
+      <li>
+        <a href=unit6.html>Unit 6 Project</a>
+      </li>
     </ol>
   </main>
 </body>
