Add unit 7.1 project

--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
       <li>
         <a href=unit6.html>Unit 6 Project</a>
       </li>
+      <li>
+        <a href=unit7.1.html>Unit 7.1 Project</a>
+      </li>
     </ol>
   </main>
 </body>
