Add unit 9.1 project

--- a/index.html
+++ b/index.html
@@ -16,27 +16,14 @@
 
   <main>
     <ol>
-      <li>
-        <a href=unit1.html>Unit 1 Project</a>
-      </li>
-      <li>
-        <a href=unit2.html>Unit 2 Project</a>
-      </li>
-      <li>
-        <a href=unit3.html>Unit 3 Project</a>
-      </li>
-      <li>
-        <a href=unit4.html>Unit 4 Project</a>
-      </li>
-      <li>
-        <a href=unit5.html>Unit 5 Project</a>
-      </li>
-      <li>
-        <a href=unit6.html>Unit 6 Project</a>
-      </li>
-      <li>
-        <a href=unit7.1.html>Unit 7.1 Project</a>
-      </li>
+      <li><a href=unit1.html>Unit 1 Project</a></li>
+      <li><a href=unit2.html>Unit 2 Project</a></li>
+      <li><a href=unit3.html>Unit 3 Project</a></li>
+      <li><a href=unit4.html>Unit 4 Project</a></li>
+      <li><a href=unit5.html>Unit 5 Project</a></li>
+      <li><a href=unit6.html>Unit 6 Project</a></li>
+      <li><a href=unit7.1.html>Unit 7.1 Project</a></li>
+      <li><a href=unit9.1.html>Unit 9.1 Project</a></li>
     </ol>
   </main>
 </body>
