Add unit 9 project 2

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       <li><a href=unit6.html>Unit 6 Project</a></li>
       <li><a href=unit7.1.html>Unit 7.1 Project</a></li>
       <li><a href=unit9.1.html>Unit 9.1 Project</a></li>
+      <li><a href=unit9.2.html>Unit 9.2 Project</a></li>
     </ol>
   </main>
 </body>
