--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <li><a href=unit5.html>Unit 5 Project</a></li>
       <li><a href=unit6.html>Unit 6 Project</a></li>
       <li><a href=unit7.1.html>Unit 7.1 Project</a></li>
+      <li><a href=unit7.2.html>Unit 7.2 Project</a></li>
       <li><a href=unit9.1.html>Unit 9.1 Project</a></li>
       <li><a href=unit9.2.html>Unit 9.2 Project</a></li>
     </ol>
