Add unit 11 project

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
       <li><a href=unit7.2.html>Unit 7.2 Project</a></li>
       <li><a href=unit9.1.html>Unit 9.1 Project</a></li>
       <li><a href=unit9.2.html>Unit 9.2 Project</a></li>
+      <li></li>
+      <li><a href=unit11/index.html>Unit 11 Project</a></li>
     </ol>
   </main>
 </body>
